# Learned-Motion-Matching

./: .gitignore  CMakeLists.txt  Compressor.cpp  Compressor.py  CustomLib.cpp  CustomLib.hpp  Decompressor.cpp  Decompressor.py  Projector.cpp  Projector.py  README.md  Stepper.cpp  Stepper.py  compressor.onnx  compressor.py  decompressor.onnx  decompressor.py  projector.py  stepper.py
database/: HierarchyData.txt  XData.txt  ZData.txt  zData.txt
demo/: tfevents.pb
misc/: CustomFunctions.py  NNModels.py
onnx/: compressor.onnx  decompressor.onnx  projector.onnx  stepper.onnx
runs/Aug04_23-17-26_Lenovo-Legion/: events.out.tfevents.1628129846.Lenovo-Legion.7951.0
runs/Aug04_23-18-01_Lenovo-Legion/: events.out.tfevents.1628129881.Lenovo-Legion.8012.0
runs/Aug04_23-18-16_Lenovo-Legion/: events.out.tfevents.1628129896.Lenovo-Legion.8057.0
runs/Aug04_23-54-37_Lenovo-Legion/: events.out.tfevents.1628132077.Lenovo-Legion.11109.0
runs/Aug04_23-57-57_Lenovo-Legion/: events.out.tfevents.1628132277.Lenovo-Legion.29509.0
runs/Aug12_09-54-49_Lenovo-Legion/: events.out.tfevents.1628772889.Lenovo-Legion.5383.0
runs/Aug12_11-34-34_Lenovo-Legion/: events.out.tfevents.1628778874.Lenovo-Legion.14840.0
runs/Aug12_11-34-42_Lenovo-Legion/: events.out.tfevents.1628778882.Lenovo-Legion.14938.0
runs/Aug12_11-35-10_Lenovo-Legion/: events.out.tfevents.1628778910.Lenovo-Legion.15058.0
runs/Aug12_13-18-31_Lenovo-Legion/: events.out.tfevents.1628785111.Lenovo-Legion.22177.0
runs/Aug12_19-57-24_Lenovo-Legion/: events.out.tfevents.1628809044.Lenovo-Legion.2155640.0
runs/Aug13_00-21-39_Lenovo-Legion/: events.out.tfevents.1628824899.Lenovo-Legion.4464.0
runs/Aug13_11-52-07_Lenovo-Legion/: events.out.tfevents.1628866327.Lenovo-Legion.4914.0
tensorboard_logger-master/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
tensorboard_logger-master/assets/: meta.tsv  vecs.tsv
tensorboard_logger-master/include/: crc.h  tensorboard_logger.h
tensorboard_logger-master/proto/: event.proto  projector_config.proto  resource_handle.proto  summary.proto  tensor.proto  tensor_shape.proto  types.proto
tensorboard_logger-master/src/: crc.cc  tensorboard_logger.cc
tensorboard_logger-master/tests/: test_tensorboard_logger.cc
(+531 files in other folders)
